--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,8 +1,22 @@
-fastapi
-dotenv
-uvicorn
+numpy
+langchain-core
+langchain-community
 langchain
-openai
 langchain-openai
-langchain_community
-langchain_core
+pydantic
+uvicorn
+fastapi
+sentence-transformers
+langchain-huggingface
+PyPDF2 
+pypdf
+faiss-cpu
+openai
+fastapi
+uvicorn
+pydantic
+psutil
+pytest
+pytest-asyncio
+pytest-cov
+httpx
